Fixed footer z-index problem

--- a/static/less/footer.less
+++ b/static/less/footer.less
@@ -13,7 +13,7 @@ body.edit .footer footer {margin-top:0px;}
     bottom: 0;
     left: 0;
     width: 100%;
-    z-index: 10000;
+    z-index: 1000;
     height: 50px;
 
     font-size: 13px;
